Homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      serviceAccountName: homarr
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7575
          volumeMounts:
            - name: homarr-data
              mountPath: /appdata
      volumes:
        - name: homarr-data
          persistentVolumeClaim:
            claimName: homarr-data
